removed images from repo

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,15 @@
 <h2>Welcome to Twiggr!</h2>
+<% @posts.each do |post| %>
+
+<div><%= post.title %></div>
+<%= image_tag(post.image.image.url(:thumb)) %>
+
+<% end %>
 
 <% form_for @post, :html => { :multipart => true }  do |f| %>
   <%= f.error_messages %>
  <%= render :partial => "/partials/post_form", :locals => {:f => f} %>
-stuff
+
   <p>
     <%= f.submit "Create" %>
   </p>
