--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,5 +1,5 @@
 <h2>Welcome to Twiggr!</h2>
-
+hhh
 <% form_for @post, :html => { :multipart => true }  do |f| %>
   <%= f.error_messages %>
  <%= render :partial => "/partials/post_form", :locals => {:f => f} %>
