--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -1,14 +1,17 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Lucida Grande',sans-serif;
   background: #000;
   margin: 0;
   padding: 0;
   color: #333; }
 
 a {
-  color: #06b;
-  font-weight: bold; }
-
+  	color:#0084B4;
+	text-decoration:none; }
+em{
+	color:#aaa;
+	font-size:12px;
+}
 .clearfix {
   clear: both; }
 
@@ -39,6 +42,167 @@ a {
   margin-top: 1.2em; }
   #header #user_bar img {
     vertical-align: middle; }
+#nav {
+	border-bottom:1px solid #666;
+}
+#nav h3{
+	display:inline;
+	padding: 2px 10px 0;
+	background-color:#ccc;
+	
+}
+.active{
+	background-color:#999;
+}
+#posts h3{
+	margin-bottom:4px;
+	color:#5E130A;
+}
+div#posts .post{
+	border-bottom: 1px dashed #ccc;
+	padding-bottom:10px;
+}
+div#posts {
+	margin-bottom:10px;
+}
+div#posts .post img.post_image{
+	float:left;
+	margin-right:20px;
+}
+div#posts .post .tweet_status{
 
+}
 p {
   line-height: 150%; }
+
+form{
+	border: 2px solid #ccc;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	padding:20px;
+}
+form h4{
+	font-style:italic;
+}
+form label{
+	display:block;
+	width: 100px;
+	float:left;
+	text-align:right;
+	color:#666;
+	font-size:12px;
+	margin-right:20px;
+	
+}
+form input[type=text], form input[type=file]{
+	font-size: 18px;
+	padding:4px;
+	margin-bottom:4px;
+}
+
+form input[type=submit]{
+	margin-left:100px;
+	background-color:#333;
+	color:#ccc;
+}
+form textarea{
+	width:480px;
+	height:100px;
+	margin-bottom:5px;
+}
+form#new_post{
+
+}
+ol.tweets{
+	font-size:1.2em;
+	list-style-image:none;
+	list-style-position:outside;
+	list-style-type:none;
+}
+ol.tweets li{
+	border-bottom:1px dashed #D2DADA;
+	line-height:1.1em;
+	padding:0.7em 0 0.6em;
+	position:relative;
+}
+ol.tweets li:first-child {
+	border-top:1px dashed #D2DADA;
+}
+ol.tweets .thumb{
+	display:block;
+	height:50px;
+	left:0;
+	margin:0 10px 0 5px;
+	overflow:hidden;
+	position:absolute;
+	width:50px;
+}
+ol.tweets .thumb img{
+	height:48px;
+	width:48px;
+}
+ol.tweets span.tweet_body{
+	display:block;
+	margin-left:65px;
+	min-height:50px;
+	overflow:hidden;
+	width:420px;
+	font-size:.8em;
+}
+
+ol.tweets .screen-name {
+	margin-right:5px;
+}
+ol.tweets .published {
+	color:#999;
+	font-size:11px;
+	font-style:italic;
+}
+
+ul#nav{
+	margin-left:5px;
+	font-size:16px;
+}
+ul#nav li {
+	display:inline;
+/*	-moz-border-radius:2px 2px 0 0;*/
+	background-color: #ccc;
+	padding: 2px 8px 0px;
+
+	}
+ul#nav li a{
+		padding: 2px 8px 3px;
+		line-height:20px;
+}
+ul#nav li.active{
+	background-color:#45585D;
+
+} 
+ul#nav li.active a{
+		color:#fff;
+}
+	
+/* clear fix */
+/*.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+ 
+.clearfix {
+	display: inline-block;
+}
+ 
+html[xmlns] .clearfix {
+	display: block;
+}
+ 
+* html .clearfix {
+	height: 1%;
+}
+.hide{
+	display:none;
+}*/
