Added body to initial submission

--- a/app/views/partials/_post_form.html.erb
+++ b/app/views/partials/_post_form.html.erb
@@ -2,6 +2,8 @@
 <%= f.text_field :title %><br>
 <%= f.label "Tweet Text" %>
 <%= f.text_area :tweet %><br>
+<%= f.label "Image Description" %>
+<%= f.text_area :body %><br>
 
 <%= f.label "Upload Image" %>
 
