--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -66,6 +66,11 @@ div#posts .post .description{
 	color: #999;
 	font-size: .9em;
 }
+div#post .description{
+	color: #999;
+	font-size: .9em;
+}
+
 div#posts {
 	margin-bottom:10px;
 }
@@ -73,8 +78,10 @@ div#posts .post img.post_image{
 	float:left;
 	margin-right:20px;
 }
-div#posts .post .tweet_status{
-
+div#posts .post .tweeted{
+	font-style:italic;
+	font-size: 10px;
+	color:#725C5B;
 }
 p {
   line-height: 150%; }
