--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,35 +1,19 @@
-<h2>Welcome to Twiggr, <%= @current_user.login %>!</h2>
+<h2>img.gr &mdash; latest images</h2>
 <div id="posts">
 <% @posts.each do |post| %>
 <div class="post">
-<h3><%= post.title %></h3>
 <div>
-	<%=link_to(image_tag(post.image.image.url(:thumb), :class => "post_image"), :controller => :posts, :action => :show, :id => post.id) %>
+	<%=link_to(image_tag(post.image.image.url(:thumb), :class => "post_image", :width => 50), :controller => :posts, :action => :show, :id => post.id) %>
 	<div class="tweet_status">
-		<div class="tweeted">
-		<% if !post.tweet.nil? %>
-		tweeted
-		<% else %>
-		not tweeted
-		<% end %></div>
+    <h3><%= post.title %></h3>
 		<div class="description">
-		<%= post.body%>
+		<%= post.body %>
 		</div>
+		<%= link_to post.user.login, user_path(post.user.login) %> <em><%= time_ago_in_words(post.created_at)%> ago</em>
 	</div>
 </div>
 <br clear="all">
-<em><%= time_ago_in_words(post.created_at)%> ago</em>
 </div>
 <% end %>
 </div>
 <br>
-
-<% form_for @post, :html => { :multipart => true, :class=>"clearfix" }  do |f| %>
-<h4>post to Twig.gr</h4>
-  <%= f.error_messages %>
- <%= render :partial => "/partials/post_form", :locals => {:f => f} %>
-
-  <p>
-    <%= f.submit "Upload" %>
-  </p>
-<% end %>
