--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -224,3 +224,11 @@ html[xmlns] .clearfix {
 .hide{
 	display:none;
 }*/
+
+/*autocomplete*/
+
+.autocomplete-w1 { background:url(/images/shadow.png) no-repeat bottom right; position:absolute; top:7px; left:6px; /* IE6 fix: */ _background:none; _top:1px; }
+.autocomplete { width:300px; border:1px solid #999; background:#FFF; cursor:default; text-align:left; max-height:350px; overflow:auto; margin:-6px 6px 6px -6px; /* IE specific: */ _height:350px;  _margin:0px 6px 6px 0; overflow-x:hidden; }
+.autocomplete .selected { background:#ddd; }
+.autocomplete div { padding:4px 5px 2px; white-space:nowrap; }
+.autocomplete strong { font-weight:normal; color:#244772; }
