--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -74,8 +74,11 @@ div#posts .post .description{
 div#post .description{
 	color: #999;
 	font-size: .9em;
+	margin-bottom:20px;
 }
-
+div#user_tags{
+	margin-bottom:20px;
+}
 div#posts {
 	margin-bottom:10px;
 }
@@ -232,3 +235,4 @@ html[xmlns] .clearfix {
 .autocomplete .selected { background:#ddd; }
 .autocomplete div { padding:4px 5px 2px; white-space:nowrap; }
 .autocomplete strong { font-weight:normal; color:#244772; }
+.autocomplete div img.avatar { width:24px; height:24px;}
