--- a/app/views/layouts/master.html.erb
+++ b/app/views/layouts/master.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
-  <head>
+<head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>twig.gr - <%= @title || "Powered by TwitterAuth" %></title>
+  <title>img.gr - <%= @title || "Powered by TwitterAuth" %></title>
     <%= stylesheet_link_tag 'master' %>
 	<%= stylesheet_link_tag 'imgnotes' %>
-
+    <%= javascript_include_tag "posts" %>
 	<%= javascript_include_tag "jquery" %>
 	<%= javascript_include_tag "jquery.autocomplete" %>
 	<%= javascript_include_tag "jquery.imgareaselect-0.4" %>
