--- a/app/views/layouts/master.html.erb
+++ b/app/views/layouts/master.html.erb
@@ -6,11 +6,11 @@
   <title>img.gr - <%= @title || "Powered by TwitterAuth" %></title>
     <%= stylesheet_link_tag 'master' %>
 	<%= stylesheet_link_tag 'imgnotes' %>
-    <%= javascript_include_tag "posts" %>
 	<%= javascript_include_tag "jquery" %>
 	<%= javascript_include_tag "jquery.autocomplete" %>
 	<%= javascript_include_tag "jquery.imgareaselect-0.4" %>
 	<%= javascript_include_tag "jquery.imgnotes-0.2" %>
+	<%= javascript_include_tag "jquery.description" %>
 	
 	
 		<%= yield :head %>
