--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -13,6 +13,8 @@
 		<% end %>
 	</div>
 	
+	<div id="tag_instructions">Click to tag your twitter friends</div>
+	
 	<div id="twitter_people" class="contents clearfix">
 		<%= render :partial => "/partials/add_users"%>
 	</div>
