--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,7 +1,7 @@
 <h2>img.gr &mdash; latest images</h2>
 <div id="images">
 <% @images.each do |image| %>
-<div class="image">
+<div class="image" id="<%= image.id %>">
 <div>
 	<%=link_to(image_tag(image.image.url(:thumb), :class => "post_image", :width => 50), :controller => :images, :action => :show, :id => image.id) %>
 	<div class="tweet_status">
