--- a/app/views/layouts/master.html.erb
+++ b/app/views/layouts/master.html.erb
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-  <title>img.gr - <%= @title || "Powered by TwitterAuth" %></title>
+  <title><%= @app_title || "img.gr" %> - <%= @app_description || "a photo-tagging tool for Twitter" %></title>
     <%= stylesheet_link_tag 'master' %>
 	<%= stylesheet_link_tag 'imgnotes' %>
 	<%= javascript_include_tag "jquery" %>
