updated image form html

--- a/app/views/partials/_image_form.html.erb
+++ b/app/views/partials/_image_form.html.erb
@@ -1,6 +1,6 @@
 <%= f.label "Description" %>
 <%= f.text_area :description %><br>
-
+<div class="chars_left_wrapper"><div class="chars_left"></div></div>
 <%= f.label "Upload Image" %>
 
 <input id="image" name="image[image]" type="file" />
