--- a/app/views/layouts/master.html.erb
+++ b/app/views/layouts/master.html.erb
@@ -38,6 +38,7 @@
         <%= yield %>
       </div>
     </div>
+	<div id="main_bg_ground"></div>
     <div id='footer'>
       Copyright &copy; 2009 img.gr
     </div>
