--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -1,10 +1,19 @@
 body {
   font-family: 'Lucida Grande',sans-serif;
-  background: #eee url(/images/side_bg.png) repeat scroll 0 0;
+  background: #eee url(/images/main_bg.png) repeat scroll 0 0;
   margin: 0;
   padding: 0;
-  color: #333; 
+  color: #333;
+  position: relative;
+  min-height: 800px;
+}
 
+#main_bg_ground {
+	background: transparent url(/images/main_bg_ground.png) repeat-x scroll 0 0;
+	position: absolute;
+	bottom: 0; left: 0;
+	height: 600px; width: 100%;
+	z-index: -9999;
 }
 
 #q{
@@ -41,6 +50,8 @@ em{
   text-align: center;
   background-image: url('/images/tile.png');
   background-repeat: repeat-x;
+  height: 199px;
+  overflow: hidden;
 }
 #headlogo img{
 	border:0px;
@@ -207,7 +218,7 @@ ol.tweets span.tweet_body{
 	display:block;
 	margin-left:65px;
 	min-height:50px;
-	overflow:hidden;
+/*	overflow:hidden;*/
 	width:420px;
 	font-size:.8em;
 }
