--- a/app/views/images/search.html.erb
+++ b/app/views/images/search.html.erb
@@ -1,4 +1,4 @@
-<h3>Images tagged of <%= twitter_profile_link(@tagged_user) %></h3>
+<h3>images <%= twitter_profile_link(@tagged_user) %> is tagged in: </h3>
 
 <% @user_tags.each do |tag| %>
 	<div class="search_thumb">
