--- a/app/views/images/all.html.erb
+++ b/app/views/images/all.html.erb
@@ -1,7 +1,4 @@
-<h2>your images</h2>
-<div style="background-color:#8A9786; font-size:16px;font-weight:bold;text-align:center">
-	<%= flash[:notice] %>
-	</div>
+<h2>friends' images</h2>
 <div id="images">
 <% @images.each do |image| %>
 <div class="image" id="<%= image.id %>">
