--- a/app/views/layouts/master.html.erb
+++ b/app/views/layouts/master.html.erb
@@ -21,7 +21,10 @@
       <ul id="nav">
         <li><%= link_to("images", "/images") %></li>
         <li><%= link_to("upload","/images/new") %></li>
+		<li><%= link_to("albums","/albums") %></li>
+		<li><%= link_to("friends", "/all") %></li>
         <li class="last"><%= link_to("tweets","/tweets") %></li>
+		
       </ul>  
       <div id='header'>
         <div id='user_bar'>
