--- a/app/views/layouts/master.html.erb
+++ b/app/views/layouts/master.html.erb
@@ -45,5 +45,16 @@
     <div id='footer'>
       Copyright &copy; 2009 img.gr
     </div>
+
+    <script type="text/javascript">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+      try {
+        var pageTracker = _gat._getTracker("UA-2076812-4");
+        pageTracker._trackPageview();
+      } catch(err) {}
+    </script>
   </body>
 </html>
